<resources>
    <string name="app_name">MyExam</string>

    <string name="label_first_name">First Name: </string>
    <string name="label_last_name">Last Name: </string>
    <string name="label_birthday">Birthday: </string>
    <string name="label_age">Age: </string>
    <string name="label_email">Email Address: </string>
    <string name="label_mobile">Mobile Number: </string>
    <string name="label_address">Address: </string>
    <string name="label_contact_person">Contact Person: </string>
    <string name="label_contact_person_mobile">Contact Person Number: </string>
    <string name="label_title_person_detail">Person Detail Activity</string>
</resources>
