<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="eventHandler"
            type="com.sample.projects.myexam.eventhandler.PersonalDetailEventHandler" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentInsetStart="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/colorPrimary"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatImageButton
                        android:id="@+id/mButtonBack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:background="@android:color/transparent"
                        android:onClick="@{() -> eventHandler.ehOnClickCloseButton()}"
                        android:src="@drawable/ic_clear_black_24dp"
                        android:tint="@android:color/white" />

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="@string/label_title_person_detail"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />

                </LinearLayout>

            </android.support.v7.widget.Toolbar>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatTextView
                        style="@style/mBaseTheme.TV.Label"
                        android:text="@string/label_first_name" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/mTVFirstName"
                        style="@style/mBaseTheme.TV" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatTextView
                        style="@style/mBaseTheme.TV.Label"
                        android:text="@string/label_last_name" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/mTVLastName"
                        style="@style/mBaseTheme.TV" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatTextView
                        style="@style/mBaseTheme.TV.Label"
                        android:text="@string/label_birthday" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/mTVBirthday"
                        style="@style/mBaseTheme.TV" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatTextView
                        style="@style/mBaseTheme.TV.Label"
                        android:text="@string/label_age" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/mTVAge"
                        style="@style/mBaseTheme.TV" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatTextView
                        style="@style/mBaseTheme.TV.Label"
                        android:text="@string/label_email" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/mTVEmail"
                        style="@style/mBaseTheme.TV" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatTextView
                        style="@style/mBaseTheme.TV.Label"
                        android:text="@string/label_mobile" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/mTVMobile"
                        style="@style/mBaseTheme.TV" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatTextView
                        style="@style/mBaseTheme.TV.Label"
                        android:text="@string/label_address" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/mTVAddress"
                        style="@style/mBaseTheme.TV" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatTextView
                        style="@style/mBaseTheme.TV.Label"
                        android:text="@string/label_contact_person" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/mTVContactPerson"
                        style="@style/mBaseTheme.TV" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatTextView
                        style="@style/mBaseTheme.TV.Label"
                        android:text="@string/label_contact_person_mobile" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/mTVContactPersonNumber"
                        style="@style/mBaseTheme.TV" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>